--- a/HistoriaDivertida/public/styles/style.login.css
+++ b/HistoriaDivertida/public/styles/style.login.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: white;
 }
 html {
     background: url('../img/columnas-4.JPG') no-repeat center center fixed;
@@ -47,7 +48,7 @@ img{
     border:none;
     border-radius: 1.5vh;
     height: 4vh;
-    background-color:rgba(53, 32, 59, 0.247);
+    background-color: rgba(53, 32, 54, 0.34);
     box-shadow: 1px 1px 2px black;
     color:white
 }
@@ -74,10 +75,38 @@ img{
     width: 2vh;
     margin: 0;
     padding: 0;
+    box-decoration-break:slice;
+    border-radius: 2em;
 }
 #remember{
-    margin-left: -20vh;
+    margin-left: 2vw;
     font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.58);
+    color: white;
+    border-radius: 2em;
+    padding: 0.4vw;
 
+}
+a{
+    padding: 1vw;
+    margin-left: 7vw;
+    text-decoration: none;
+    color: aliceblue;
+    background-color: rgba(0, 0, 0, 0.43);
+    border-radius: 2em;
+    box-shadow: 1px 1px 2px black;
+}
+a:hover{
+    background-color: rgba(0, 7, 6, 0.88);
+    box-shadow: 4px 4px 4px rgb(1, 3, 0);
+}
+h3{
+    font-family: Arial;
+    color: white;
+    margin: 2vh;
+    padding: 0.5vw;
+    border-radius: 2em;
+    background-color: rgba(0, 0, 0, 0.46);
+    box-shadow: 2px 2px 2px rgb(1, 3, 0);
 }
 
